diesel-builders/tests/ui/missing_mandatory_pk_same_as.stderr
error: Primary key column `id` must have a `#[same_as(mandatory_table::Column)]` attribute specifying the corresponding column in the mandatory table `mandatory_table`.
  --> tests/ui/missing_mandatory_pk_same_as.rs:15:5
   |
15 |     id: i32,
   |     ^^^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `child_table`
  --> tests/ui/missing_mandatory_pk_same_as.rs:12:23
   |
12 | #[diesel(table_name = child_table)]
   |                       ^^^^^^^^^^^ use of unresolved module or unlinked crate `child_table`
   |
   = help: if you wanted to use a crate named `child_table`, use `cargo add child_table` to add it to your `Cargo.toml`
